--- a/MoveRX/Info.plist
+++ b/MoveRX/Info.plist
@@ -6,5 +6,7 @@
 	<array>
 		<string>Proxima Nova Bold.otf</string>
 	</array>
+	<key>CFBundleVersion</key>
+	<string>1.0.0</string>
 </dict>
 </plist>
